--- a/angular.json
+++ b/angular.json
@@ -38,11 +38,11 @@
               "src/CNAME"
             ],
             "styles": [
-              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              // "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.scss"
             ],
             "scripts": [
-              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
+              // "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
             ]
             // ,"baseHref": "https://captainsteel.com/",
             // "deployUrl": "https://captainsteel.com/"
@@ -105,12 +105,12 @@
             ],
             "styles": [
               "node_modules/aos/dist/aos.css",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              // "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.scss"
             ],
             "scripts": [
               "node_modules/aos/dist/aos.js",
-              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
+              // "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
             ]
           }
         },
