--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@angular/router": "^17.3.9",
     "@fortawesome/fontawesome-free": "^6.5.1",
     "crypto-js": "^4.2.0",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
     "ngx-toastr": "^18.0.0",
     "rxjs": "^7.8.1",
     "tslib": "^2.5.0",
