--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/platform-browser-dynamic": "^17.3.9",
     "@angular/router": "^17.3.9",
     "@fortawesome/fontawesome-free": "^6.5.1",
+    "bootstrap": "^5.3.3",
     "crypto-js": "^4.2.0",
     "ngx-toastr": "^18.0.0",
     "rxjs": "^7.8.1",
